Made node- and content-prefix mandatory and added prefix.